FIx bug with .map__decorate-line on width >479px  - was visible, but now is hidden on width > 479px and is vissible on <480px

--- a/src/assets/style/layout/sections/_map.scss
+++ b/src/assets/style/layout/sections/_map.scss
@@ -100,9 +100,14 @@
 .map {
     &__decorate-line {
         background-color: #fff;
+        display: none;
         height: 30px;
         position: absolute;
         width: 100%;
+
+        @media (max-width: 479px) {
+            display: block;
+        }
 
         &_hide-data {
             top: 315px; /*345 - 30*/
